# Gem_cmakelist

./: CMakeLists.txt  README.md  clean.sh
Libs/: CMakeLists.txt  build.sh
Libs/gem/: Asset.hpp  Logger.cpp  Singleton.inl
Libs/gem/detail/: SdlGraphics.hpp
Project/: CMakeLists.txt
Project/include/: Application.h
Project/src/: Application.cpp  main.cpp
gem/: Makefile
