cmake_minimum_required(VERSION 2.8)

project (gem)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

file(GLOB gem_SRC
   gem/*.cpp
   gem/*.hpp
   gem/*.h
   gem/*.inl
   )

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/detail)
add_library(gem SHARED ${gem_SRC})

#INCLUDE(FindPkgConfig)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
set(SDL2_LIBRARY ${SDL2_ROOT}/lib/x86)
set(SDL2_INCLUDE_DIR ${SDL2_ROOT}/include)
set(SDL2IMAGE_INCLUDE_DIR ${SDL2_IMAGE_ROOT}/include)
set(BOOST_ROOT ${BOOST_ROOT})

find_package(SDL2 REQUIRED)
find_package(Boost REQUIRED COMPONENTS)

#PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
#PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
